force-app/idp/examples/consolidated-statement/objects/Asset/fields/Product_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Account_Number__c</fullName>
    <description
  >Match Field of the Holdings repeating section: the account number printed on each statement line.</description>
    <externalId>true</externalId>
    <label>Product Account Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>